Fix dark mode styles

--- a/src/components/common/navbar/Navbar.css
+++ b/src/components/common/navbar/Navbar.css
@@ -3,7 +3,14 @@
     height: 50px;
     line-height: 50px;
     padding: 5px;
+}
+
+.navbar-container-day-mode {
     background-color: #282520;
+}
+
+.navbar-container-night-mode {
+    background-color: black;
 }
 
 .left-navbar-container {
