--- a/src/components/routing/RoutingComponent.css
+++ b/src/components/routing/RoutingComponent.css
@@ -3,7 +3,15 @@
     background-color: #212020;
 }
 
-.container-night-mode * {
+.container-night-mode .company-name,
+.container-night-mode li,
+.container-night-mode h2,
+.container-night-mode .content-element,
+.container-night-mode input,
+.container-night-mode textarea,
+.container-night-mode .date-field,
+.container-night-mode h1,
+.container-night-mode h5 {
     color: white;
 }
 
